Full implementation of Event